# makefile_gen

./: .gitignore  CMakeLists.txt  Readme.md  Thanks  conanfile.txt
Testing/: CMakeLists.txt  Constraints_test.cpp  Depfile_test.cpp  Script_test.cpp  hdl_resource_testing.cpp  test_main.cpp
Testing/Backend/: Application_definition_generator.cpp  Application_management_test.cpp  Peripheral_definition_generator.cpp  auxiliary_resolver.cpp  dependency_resolver.cpp  project_generator.cpp  python_script_runner.cpp  toolchain_manager.cpp
Testing/analysis/: analysis.cpp  bus_analyzer.cpp  documentation_analyzer.cpp  function_processing.cpp  hdl_ast_builder.cpp  parameter_extraction.cpp  parameter_processing.cpp  port_extraction.cpp  shunting_yard.cpp
Testing/check_files/: Depfile_gs  test_package.sv  test_sv_module.sv  test_sv_parameter_extraction.sv
Testing/check_files/documentation_analyzer/: test_bus_hierarchy.sv  test_processor_doc.sv
Testing/data_model/: Constraints_test.cpp  DataFile_test.cpp  Depfile_test.cpp  Expression_component.cpp  Expression_evaluator.cpp  Script_test.cpp  bus_structure_test.cpp  data_store_test.cpp  hdl_resource_testing.cpp  initialization_list.cpp  module_register_documentation.cpp  settings_store_test.cpp
Testing/data_model/bus_structure/: bus_specs_manager.cpp  bus_structure_test.cpp
Testing/files/: Depfile
Testing/frontend/: cache_manager.cpp  repository_walker.cpp  sv_preprocessor.cpp
bus_specs/: axi_lite.json  axi_stream.json
cmake-conan/: conan_provider.cmake
grammars/: CMakeLists.txt  sv2017.g4  sv2017Lexer.g4  vhdlLexer.g4  vhdlParser.g4
includes/: CMakeLists.txt  Depfile.h  Repository_walker.h  ananke.hpp  frontend.h  main.hpp  sv_visitor.h
includes/mgp_sv/: CMakeLists.txt  sv2017.cpp  sv2017.h  sv2017.interp  sv2017.tokens  sv2017BaseListener.cpp  sv2017BaseListener.h  sv2017BaseVisitor.cpp  sv2017BaseVisitor.h  sv2017Lexer.cpp  sv2017Lexer.h  sv2017Lexer.interp  sv2017Listener.cpp  sv2017Listener.h  sv2017Visitor.cpp  sv2017Visitor.h
includes/mgp_vh/: CMakeLists.txt  vhdlLexer.cpp  vhdlLexer.h  vhdlLexer.interp  vhdlParser.cpp  vhdlParser.h  vhdlParser.interp  vhdlParserBaseListener.cpp  vhdlParserBaseListener.h  vhdlParserBaseVisitor.cpp  vhdlParserBaseVisitor.h  vhdlParserListener.cpp  vhdlParserListener.h  vhdlParserVisitor.cpp  vhdlParserVisitor.h
src/: CMakeLists.txt  Depfile.cpp  Repository_walker.cpp  ananke.cpp  ananke.hpp  frontend.cpp  main.cpp  sv_visitor.cpp
src/Backend/: Auxiliary_resolver.cpp  Dependency_resolver.cpp  Toolchain_manager.cpp  Vivado_manager.cpp  application_definition_generator.cpp  lattice_project_generator.cpp  new_app_generator.cpp  peripheral_definition_generator.cpp  project_generator_base.cpp  python_script_runner.cpp  xilinx_project_generator.cpp
src/Backend/Lattice/: Radiant_manager.cpp  lattice_project_generator.cpp
src/Backend/Xilinx/: Vivado_manager.cpp  xilinx_project_generator.cpp
src/Backend/uplatform/: application_definition_generator.cpp  peripheral_definition_generator.cpp
src/analysis/: HDL_ast_builder.cpp  HDL_ast_builder_v2.cpp  HDL_loop_solver.cpp  bus_analysis.cpp  control_bus_analysis.cpp  data_acquisition_analysis.cpp  documentation_analyzer.cpp  loop_solver.cpp  parameter_solver.cpp  proxy_bus_analysis.cpp  sv_analyzer.cpp  sv_visitor.cpp  vhdl_analyzer.cpp  vhdl_visitor.cpp
src/analysis/passes/: loop_solution_pass.cpp  parameter_solution_pass.cpp  pass_manager.cpp  port_solution.cpp  processor_detection.cpp
src/data_model/: Constraints.cpp  DataFile.cpp  Depfile.cpp  HDL_Resource.cpp  HDL_entity.cpp  HDL_instance.cpp  Resource.cpp  Resource_base.cpp  Script.cpp  data_store.cpp  expression.cpp  mdarray.cpp  parameter.cpp  settings_store.cpp
src/data_model/HDL/: HDL_Resource.cpp  HDL_dependencies_factory.cpp  HDL_dependency.cpp  HDL_instance.cpp  HDL_instance_AST.cpp  HDL_instances_factory.cpp  HDL_interfaces_factory.cpp  HDL_loop.cpp  HDL_loops_factory.cpp  HDL_modules_factory.cpp  HDL_net.cpp  HDL_packages_factory.cpp  HDL_parameter.cpp  HDL_parameters_factory.cpp  resource_factory_base.cpp
src/data_model/HDL/factories/: HDL_concat_factory.cpp  HDL_functions_factory.cpp  HDL_instances_factory.cpp  HDL_interfaces_factory.cpp  HDL_loops_factory.cpp  HDL_modules_factory.cpp  HDL_net_factory.cpp  HDL_parameters_factory.cpp  HDL_range_factory.cpp  resource_factory_base.cpp
src/data_model/HDL/factories/nets/: HDL_concat_factory.cpp  HDL_net_factory.cpp  HDL_range_factory.cpp  HDL_repetition_factory.cpp
src/data_model/HDL/factories/parameters/: cast_factory.cpp  concatenation_factory.cpp  expressions_factory.cpp  function_calls_factory.cpp  indexing_factory.cpp  replication_factory.cpp  ternary_factory.cpp
src/data_model/HDL/parameters/: Cast.cpp  Concatenation.cpp  Expression.cpp  Expression_component.cpp  Expression_evaluator.cpp  HDL_function.cpp  HDL_function_call.cpp  HDL_function_def.cpp  HDL_parameter.cpp  Initialization_list.cpp  Parameter_processor.cpp  Replication.cpp  Ternary.cpp
src/data_model/bus_mapping/: address_resolver.cpp  bus_component.cpp  bus_mapper.cpp  bus_specs_manager.cpp  mapper_bus_component.cpp
src/data_model/bus_structure/: bus_component.cpp  bus_crossbar.cpp  bus_module.cpp  bus_registers.cpp
src/data_model/documentation/: channel.cpp  channel_group.cpp  field_documentation.cpp  module_documentation.cpp  processor_instance.cpp  register_documentation.cpp
src/data_model/documentation/bus_structure/: bus_component.cpp  bus_crossbar.cpp  bus_module.cpp  bus_registers.cpp  bus_submodule.cpp
src/data_model/expressions/: bus_mapping_expression.cpp  expression.cpp  expression_evaluator.cpp
src/data_store/: data_store.cpp
src/frontend/: Repository_walker.cpp  cache_manager.cpp
src/frontend/analysis/: documentation_analyzer.cpp  sv_analyzer.cpp  sv_preprocessor.cpp  sv_visitor.cpp  vhdl_analyzer.cpp  vhdl_visitor.cpp
src/frontend/analysis/preprocessor/: conditional_solver.cpp  macro_processor.cpp  sv_preprocessor.cpp
templates/: Depfile.j2  make_bitstream_xlnx.j2  make_project_lscc.j2  make_project_xlnx.j2  (+6 more)
(+175 files in other folders)
